The 8th task. Adding a user
